test/expected/declare_v+f_v.out
declare f of scope S as virtual function
        ^
9: error: "S::f": "virtual" can not be used in file-scoped functions
